--- a/scss/Layout/_body.scss
+++ b/scss/Layout/_body.scss
@@ -11,17 +11,23 @@
 
 
         .container {
+        position: relative;
         box-sizing: border-box;
-        display: flex; /* フレックスコンテナを作成 */
+        display:flex; /* フレックスコンテナを作成 */
+        gap:40px;
         flex-wrap: wrap; /* アイテムを折り返す */
+        height:2000px;
         
-        padding-left: 20em; 
-        padding-right:20em;
+
+        /*中央寄りになるように左右を寄せてある*/
+        padding-left: 30em; 
+        padding-right:30em;
 
         .article {
             flex:40%; /* 各記事の幅を50%に設定し、間隔を考慮 */
-            width:5em;
-            background-color: #f4f4f4;
+            
+            /*background-color: #f4f4f4;*/
+            background-image:url(https://placehold.jp/400x300.png);
             position: relative;
             box-sizing: content-box;
             justify-content: space-around; /* アイテム間にスペースを配置 */
@@ -30,6 +36,14 @@
             border-radius: 5px; /* 角を丸く */
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* シャドウを追加 */
             transition: transform 0.3s; /* ホバー時のアニメーション */
+
+
+
+            img{
+                width:auto;  /*横幅は自動調整*/
+                height:100%; /* 高さに合わせる */
+                
+            }
         }
     }
     }    
