--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,7 @@
 @use "./Layout/header";
 @use "./Layout/footer";
 @use "./Layout/body";
+
 @use "./Foundation/variables";
+
+@use "./Utility/category.scss";
