--- a/scss/Utility/_category.scss
+++ b/scss/Utility/_category.scss
@@ -1,6 +1,7 @@
 $font-color:#ffffff;
 
 .u-category {
+    z-index: 10;
     display: inline-block;
     position: absolute;
     color: $font-color;
