--- a/scss/Layout/_header.scss
+++ b/scss/Layout/_header.scss
@@ -22,8 +22,8 @@ header{
             /*display: block;*/
             text-decoration: none;
             color: rgb(255, 255, 255);
-            margin-right:1em;
-            margin-left:1em;
+            margin-right:1vw;
+            margin-left:1vw;
             font-size:120%;
 
             transition: all ease 0.5s 0s;
@@ -32,8 +32,8 @@ header{
     }
 
     img{
-        margin-left:20em;
-        margin-right:60em;
+        margin-left:10vw;
+        margin-right:50vw;
     }
 
 
