--- a/scss/style.css
+++ b/scss/style.css
@@ -22,14 +22,14 @@ header nav i {
   /*display: block;*/
   text-decoration: none;
   color: rgb(255, 255, 255);
-  margin-right: 1em;
-  margin-left: 1em;
+  margin-right: 1vw;
+  margin-left: 1vw;
   font-size: 120%;
   transition: all ease 0.5s 0s;
 }
 header img {
-  margin-left: 20em;
-  margin-right: 60em;
+  margin-left: 10vw;
+  margin-right: 50vw;
 }
 header ul {
   display: flex;
@@ -39,6 +39,14 @@ header li {
   transition: all 300ms 0 ease;
 }
 
+.l-main {
+  margin: 0;
+  padding: 0px;
+}
+
+.body {
+  margin: 0%;
+}
 .body .l-article .title {
   font-size: 2.5em;
   font-family: "System UI", sans-serif;
@@ -79,7 +87,7 @@ header li {
   text-overflow: ellipsis;
 }
 
-.u-category {
+.c-category {
   z-index: 10;
   display: inline-block;
   position: absolute;
@@ -87,52 +95,114 @@ header li {
   font-size: small;
   background-size: 20px 30px;
 }
-.u-category .PR {
+.c-category .PR {
   background-color: #646464; /* 赤色の背景 */
   color: #ffffff; /* 白色の文字 */
   padding: 0.5em; /* パディングを追加 */
   border-radius: 5px; /* 角を丸く */
   font-weight: bold; /* 太字にする */
 }
-.u-category .ACTIVITY {
+.c-category .ACTIVITY {
   background-color: #ffb20a; /* 赤色の背景 */
   color: #ffffff; /* 白色の文字 */
   padding: 0.5em; /* パディングを追加 */
   border-radius: 5px; /* 角を丸く */
   font-weight: bold; /* 太字にする */
 }
-.u-category .ITEM {
+.c-category .ITEM {
   background-color: #0dc15b; /* 赤色の背景 */
   color: #ffffff; /* 白色の文字 */
   padding: 0.5em; /* パディングを追加 */
   border-radius: 5px; /* 角を丸く */
   font-weight: bold; /* 太字にする */
 }
-.u-category .WELL-BEING {
+.c-category .WELL-BEING {
   background-color: #4d7ed8; /* 赤色の背景 */
   color: #ffffff; /* 白色の文字 */
   padding: 0.5em; /* パディングを追加 */
   border-radius: 5px; /* 角を丸く */
   font-weight: bold; /* 太字にする */
 }
-.u-category .ISSUE {
+.c-category .ISSUE {
   background-color: #009a0a; /* 赤色の背景 */
   color: #ffffff; /* 白色の文字 */
   padding: 0.5em; /* パディングを追加 */
   border-radius: 5px; /* 角を丸く */
   font-weight: bold; /* 太字にする */
 }
-.u-category .CULTURE {
+.c-category .CULTURE {
   background-color: #654732; /* 赤色の背景 */
   color: #ffffff; /* 白色の文字 */
   padding: 0.5em; /* パディングを追加 */
   border-radius: 5px; /* 角を丸く */
   font-weight: bold; /* 太字にする */
 }
-.u-category .LOVE {
+.c-category .LOVE {
   background-color: #a94949; /* 赤色の背景 */
   color: #ffffff; /* 白色の文字 */
   padding: 0.5em; /* パディングを追加 */
   border-radius: 5px; /* 角を丸く */
   font-weight: bold; /* 太字にする */
+}
+
+.p-hero {
+  padding: 0px;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
+  background: rgb(0, 0, 0);
+  border-color: black;
+}
+.p-hero__main {
+  grid-row: 1/3;
+  grid-column: 1/2;
+  position: relative;
+  overflow: hidden;
+}
+.p-hero__main .c-article-card__image {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  display: block;
+}
+.p-hero__main .c-article-card__title {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 0.2rem;
+  color: white;
+  font-size: 1.5rem;
+}
+.p-hero__sub {
+  position: relative;
+  overflow: hidden;
+}
+.p-hero__sub:nth-child(2) {
+  grid-row: 2;
+  grid-column: 2;
+}
+.p-hero__sub:nth-child(3) {
+  grid-row: 1;
+  grid-column: 2;
+}
+.p-hero__sub .c-article-card__image {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  display: block;
+}
+.p-hero__sub .c-article-card__title {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 0.2rem;
+  color: white;
+  font-size: 1.5rem;
 }/*# sourceMappingURL=style.css.map */
