--- a/scss/Layout/_body.scss
+++ b/scss/Layout/_body.scss
@@ -1,6 +1,8 @@
 @use "../Foundation/variables" as *; // 変数をインポート
 
 .body{
+    width:100%;
+    height:100%;
     margin: 0%;
     .l-article{
         &__title{
