--- a/scss/Object/Component/_button.scss
+++ b/scss/Object/Component/_button.scss
@@ -25,9 +25,41 @@
         transform: scale(1.2);
     }
     
-    &__play{
-        display:inline-block;
+    &__submit{
+        width:5%;
+        display:inline;
+        line-height: 25%;
+        background-color: rgb(160, 160, 160);
+        border-radius:10px;
+        color: white;
+        font-size: 1em;
+        border: none;
+        cursor: pointer;
+        padding:1em;
+        margin:0 1em;
+        transition: all 0.3s ease;
+        &:hover {
+            background-color: darkgray;
+            transform: scale(1.05);
+        }
     }
+    &__play{
+        position:absolute;
+        width:25%;
+        height:25%;
+        display:block;
+        text-align: center;
+        margin: 0 auto;
+        top: 25%;
+        left: 0;
+        right: 0;
+    }
+    &__swiper-next,
+    &__swiper-prev{
+        color: white;
+
+    }
+    
 }
 
 
